[metadata]
name = coordinates
version = 0.0.1
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = "Algorithms for manipulating coordinate systems used in Geophysics"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = geoscience, geophysics
url = https://github.com/birocoles/coordinates
project_urls =
    Bug Tracker = https://github.com/birocoles/coordinates/issues
    Source Code = https://github.com/birocoles/coordinates
    Release Notes = https://github.com/birocoles/coordinates/releases
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Scientific/Geophysics
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
